Fix `Class<?>.newInstance()` deprecation warning